--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 	
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="slicease.js,playease.js,chatease.js,chatease-server,rtmpmate" />
+	<meta name="keywords" content="slicease.js,playease.js,chatease.js,kiwichatd,chatease-server,rtmpmate" />
 	<meta name="description" content="" />
 	<meta name="author" content="Tony Lau" />
 	
@@ -73,7 +73,7 @@
 						<li><a href='slicease.html'>slicease.js 3.0</a></li>
 						<li><a href='playease.html'>playease.js</a></li>
 						<li><a href='chatease.html'>chatease.js</a></li>
-						<li><a href='chatease-server.html'>chatease-server</a></li>
+						<li><a href='kiwichatd.html'>kiwichatd</a></li>
 						<li><a href='http://rtmpmate.com' target='_blank'>rtmpmate</a></li>
 					</ul>
 				</li>
