--- a/chatease.html
+++ b/chatease.html
@@ -77,7 +77,7 @@
 						<li><a href='slicease.html'>slicease.js 3.0</a></li>
 						<li><a href='playease.html'>playease.js</a></li>
 						<li><a href='chatease.html'>chatease.js</a></li>
-						<li><a href='chatease-server.html'>chatease-server</a></li>
+						<li><a href='kiwichatd.html'>kiwichatd</a></li>
 						<li><a href='http://rtmpmate.com' target='_blank'>rtmpmate</a></li>
 					</ul>
 				</li>
@@ -93,7 +93,7 @@
 		<section>
 			<p>
 				[source] <a href='https://github.com/studease/chatease' target='_blank'>https://github.com/studease/chatease</a><br/>
-				[zh_doc] <a href='http://blog.csdn.net/icysky1989/article/details/52138527' target='_blank'>http://blog.csdn.net/icysky1989/article/details/52138527</a>
+				[中文] <a href='http://blog.csdn.net/icysky1989/article/details/52138527' target='_blank'>http://blog.csdn.net/icysky1989/article/details/52138527</a>
 			</p>
 			
 			<p>
