--- a/playease.html
+++ b/playease.html
@@ -78,7 +78,7 @@
 						<li><a href='slicease.html'>slicease.js 3.0</a></li>
 						<li><a href='playease.html'>playease.js</a></li>
 						<li><a href='chatease.html'>chatease.js</a></li>
-						<li><a href='chatease-server.html'>chatease-server</a></li>
+						<li><a href='kiwichatd.html'>kiwichatd</a></li>
 						<li><a href='http://rtmpmate.com' target='_blank'>rtmpmate</a></li>
 					</ul>
 				</li>
@@ -94,7 +94,7 @@
 		<section>
 			<p>
 				[source] <a href='https://github.com/studease/playease' target='_blank'>https://github.com/studease/playease</a><br/>
-				[zh_doc] <a href='http://blog.csdn.net/icysky1989/article/details/75094205' target='_blank'>http://blog.csdn.net/icysky1989/article/details/75094205</a>
+				[中文] <a href='http://blog.csdn.net/icysky1989/article/details/75094205' target='_blank'>http://blog.csdn.net/icysky1989/article/details/75094205</a>
 			</p>
 			
 			<p>
