--- a/chatease-server.html
+++ b/chatease-server.html
@@ -90,6 +90,7 @@
 	<div class='wrap'>
 		<div>
 		<section>
+			<h2>chatease-server</h2>
 			<p>
 				[source] <a href='https://github.com/studease/chatease-server' target='_blank'>https://github.com/studease/chatease-server (1.1)</a><br/>
 				[中文] <a href='http://blog.csdn.net/icysky1989/article/details/52138527' target='_blank'>http://blog.csdn.net/icysky1989/article/details/52138527</a>
@@ -109,7 +110,7 @@
 			
 			<h3>Preparation</h3>
 			<p>
-				For the Enterprise Edition, supply an interface to return a JSON object formatted as /data/userinfo.json.</br>
+				For the Enterprise Edition, supply an interface to return a JSON object formatted as /data/userinfo.json.<br/>
 				While a client is connecting to upgrade protocol, it sends an identify upstream request, carrying channel and token params, to get the user info, which will decide whether the operation will be satisfied.
 			</p>
 			<p>
