--- a/chatease.html
+++ b/chatease.html
@@ -91,6 +91,7 @@
 	<div class='wrap'>
 		<div>
 		<section>
+			<h2>chatease.js</h2>
 			<p>
 				[source] <a href='https://github.com/studease/chatease' target='_blank'>https://github.com/studease/chatease</a><br/>
 				[中文] <a href='http://blog.csdn.net/icysky1989/article/details/52138527' target='_blank'>http://blog.csdn.net/icysky1989/article/details/52138527</a>
@@ -257,9 +258,9 @@ _eventMapping = {
 				</li>
 			</ul>
 			
-			<h3>Websocket Server</h3>
+			<h3>Server</h3>
 			<p>
-				<a href='chatease-server.html' target='_blank'>chatease-server</a>
+				<a href='kiwichatd.html' target='_blank'>kiwichatd</a>
 			</p>
 			
 			<h3>Software License</h3>
