--- a/contact.html
+++ b/contact.html
@@ -91,8 +91,8 @@
 		<section>
 			<h3>Contact Us</h3>
 			<p>
-				Talk with a video expert about how to meet your video goals.<br/><br/>
-				<i>(Dial the number or post to the email address at the top or bottom of the page if you don't get a replay timely.)</i>
+				Talk with an expert about how to meet your goals.<br/><br/>
+				<i>(Dial the number or post to the email at the top or bottom of the page if you don't get a replay timely.)</i>
 			</p>
 		</section>
 		</div>
