--- a/slicease.html
+++ b/slicease.html
@@ -90,6 +90,7 @@
 	<div class='wrap'>
 		<div>
 		<section>
+			<h2>slicease.js</h2>
 			<p>
 				[source] <a href='https://github.com/studease/slicease' target='_blank'>https://github.com/studease/slicease</a><br/>
 				[中文] <a href='http://blog.csdn.net/icysky1989/article/details/39624155' target='_blank'>http://blog.csdn.net/icysky1989/article/details/39624155</a>
