--- a/chatease.html
+++ b/chatease.html
@@ -342,6 +342,9 @@ _eventMapping = {
 				name: 'def',
 				title: 'CHATEASE ' + chatease.version,
 				swf: 'swf/chatease.swf'
+			},
+			skin: {
+				name: chatease.utils.isMobile() ? 'mobile' : 'def'
 			}
 		});
 		
