--- a/playease.html
+++ b/playease.html
@@ -543,6 +543,9 @@ _eventMapping = {
 			render: {
 				name: 'none',
 				swf: 'swf/chatease.swf'
+			},
+			skin: {
+				name: chatease.utils.isMobile() ? 'mobile' : 'def'
 			}
 		});
 		
