--- a/solutions-mobile.html
+++ b/solutions-mobile.html
@@ -210,6 +210,9 @@ a:active, a:focus, a:hover {
 				name: 'def',
 				title: '',
 				swf: 'swf/chatease.swf'
+			},
+			skin: {
+				name: chatease.utils.isMobile() ? 'mobile' : 'def'
 			}
 		});
 		
