--- a/solutions.html
+++ b/solutions.html
@@ -336,6 +336,9 @@
 				name: 'def',
 				title: 'CHATEASE ' + chatease.version,
 				swf: 'swf/chatease.swf'
+			},
+			skin: {
+				name: chatease.utils.isMobile() ? 'mobile' : 'def'
 			}
 		});
 		
