--- a/contact.html
+++ b/contact.html
@@ -177,6 +177,9 @@
 				name: 'def',
 				title: 'CHATEASE ' + chatease.version,
 				swf: 'swf/chatease.swf'
+			},
+			skin: {
+				name: chatease.utils.isMobile() ? 'mobile' : 'def'
 			}
 		});
 		
