--- a/solutions.html
+++ b/solutions.html
@@ -113,7 +113,7 @@
 				<div id='playwrap'>
 					<div id='player'></div>
 				</div>
-				<div id='chatwrap'>
+				<div id='chatwrap' style='width: 100%; max-width: 640px; height: 400px;'>
 					<div id='chat'></div>
 				</div>
 			</div>
