--- a/solutions.html
+++ b/solutions.html
@@ -338,7 +338,7 @@
 				swf: 'swf/chatease.swf'
 			},
 			skin: {
-				name: chatease.utils.isMobile() ? 'mobile' : 'def'
+				name: 'def'
 			}
 		});
 		
