--- a/solutions.html
+++ b/solutions.html
@@ -338,7 +338,7 @@
 				swf: 'swf/chatease.swf'
 			},
 			skin: {
-				name: 'def'
+				name: chatease.utils.isMobile() ? 'mobile' : 'def'
 			}
 		});
 		
@@ -375,7 +375,7 @@
 				setTimeout(function() {
 					if (!playease.utils.isHorizontal()) {
 						var cw = document.getElementById('chatwrap');
-						var videoHeight = window.innerWidth * 9 / 16 + 50;
+						var videoHeight = window.innerWidth * 9 / 16 + 40;
 						cw.style.height = (window.innerHeight - videoHeight) + 'px';
 					}
 					
