--- a/solutions.html
+++ b/solutions.html
@@ -334,7 +334,7 @@
 			debug: true,
 			render: {
 				name: 'def',
-				title: 'CHATEASE ' + chatease.version,
+				title: chatease.utils.isMobile() ? '' : 'CHATEASE ' + chatease.version,
 				swf: 'swf/chatease.swf'
 			},
 			skin: {
