--- a/kiwichatd.html
+++ b/kiwichatd.html
@@ -110,11 +110,12 @@
 			
 			<h3>Download</h3>
 			<h5>Linux Static Builds</h5>
+			<b>
+				32-bit and 64-bit for kernel 3.9 and above
+			</b>
 			<p>
-				release: 2.0.00
-			</p>
-			<p>
-				x86: <a class='btn green' href='static/kiwichatd-x86-2.0.00-static.zip'>32-bit and 64-bit for kernel 3.9 and above</a>
+				release: 2.0.00<br/>
+				x86: <a href='static/kiwichatd-x86-2.0.00-static.zip'>kiwichatd-x86-2.0.00-static.zip</a>
 			</p>
 			
 			<h3>License Key</h3>
