--- a/kiwichatd.html
+++ b/kiwichatd.html
@@ -114,8 +114,8 @@
 				32-bit and 64-bit for kernel 3.9 and above
 			</b>
 			<p>
-				release: 2.0.00<br/>
-				x86: <a href='static/kiwichatd-x86-2.0.00-static.zip'>kiwichatd-x86-2.0.00-static.zip</a>
+				release: 2.0.01<br/>
+				x86: <a href='static/kiwichatd-x86-latest-static.zip'>kiwichatd-x86-latest-static.zip</a>
 			</p>
 			
 			<h3>License Key</h3>
