--- a/solutions.html
+++ b/solutions.html
@@ -41,6 +41,7 @@
 	
 	<link type='text/css' rel='stylesheet' href='css/style.css' />
 	
+	<script type='text/javascript' src='js/bscroll.min.js'></script>
 	<script type='text/javascript' src='js/playease.min.js'></script>
 	<script type='text/javascript' src='js/chatease.min.js'></script>
 </head>
@@ -331,6 +332,7 @@
 			height: 400,
 			maxlength: 50,
 			maxretries: -1,
+			smoothing: chatease.utils.isMobile(),
 			debug: true,
 			render: {
 				name: 'def',
