--- a/chatease-server.html
+++ b/chatease-server.html
@@ -93,16 +93,18 @@
 			<h2>chatease-server</h2>
 			<p>
 				[source] <a href='https://github.com/studease/chatease-server' target='_blank'>https://github.com/studease/chatease-server (1.1)</a><br/>
-				[中文] <a href='http://blog.csdn.net/icysky1989/article/details/52138527' target='_blank'>http://blog.csdn.net/icysky1989/article/details/52138527</a>
+				[中文] <a href='http://blog.csdn.net/icysky1989/article/details/52138527' target='_blank'>http://blog.csdn.net/icysky1989/article/details/52138527</a><br/>
+				公众号：STUDEASE<br/>
+				QQ群：528109813
 			</p>
 			
 			<p>
-				This is a websocket chat server coded in C.
+				This is a high-performance websocket chat server coded in C.
 			</p>
 			
 			<h3>News</h3>
 			<ul class='u5 square'>
-				<li>This server was renamed as <a href='kiwichatd.html'>kiwichatd</a> at version 2.0, and closed source.<i> - Dec. 13, 2017</i></li>
+				<li>This server was renamed as <a href='kiwichatd.html'>kiwichatd</a> at version 2.0.<i> - Dec. 13, 2017</i></li>
 				<li>Fixed bad request caused crash, & incomplete http header caused endless loop issues in version 1.0.39.<i> - Aug. 15, 2017</i></li>
 				<li>First stable version for websocket chat released: chatease.js 1.0.05, chatease-server 1.0.14.<i> - Apr. 13, 2017</i></li>
 				<li><a href='chatease-server.html'>Chatease-server</a>, a websocket chat server coded in C, beta released.<i> - Aug. 4, 2016</i></li>
@@ -111,7 +113,7 @@
 			<h3>Preparation</h3>
 			<p>
 				For the Enterprise Edition, supply an interface to return a JSON object formatted as /data/userinfo.json.<br/>
-				While a client is connecting to upgrade protocol, it sends an identify upstream request, carrying channel and token params, to get the user info, which will decide whether the operation will be satisfied.
+				While a client connecting to upgrade protocol, it sends an identify upstream request, carrying channel and token params, to get the user info, which will decide whether the operation will be satisfied.
 			</p>
 			<p>
 				The Preview Edition is more like a stand-alone server. The user info, includes name, icon, role, and channel state could be present in params. However, this is not safe.
@@ -142,7 +144,7 @@ sudo ./start.sh
 				<a href='chatease.html' target='_blank'>chatease.js</a>
 			</p>
 			
-			<h3>Software License</h3>
+			<h3>License</h3>
 			<p>
 				Apache License 2.0.
 			</p>
