--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			<div id='news'>
 				<h3>News</h3>
 				<ul class='u5 square'>
-					<li>The chatease-server was renamed as <a href='kiwichatd.html'>kiwichatd</a> at version 2.0, and closed source.<i> - Dec. 13, 2017</i></li>
+					<li>The chatease-server was renamed as <a href='kiwichatd.html'>kiwichatd</a> at version 2.0.<i> - Dec. 13, 2017</i></li>
 					<li>New feature of <a href='playease.html'>playease.js</a>: MPEG-DASH.<i> - Aug. 10, 2017</i></li>
 					<li>Added support for MSIE 8 & 9 of <a href='chatease.html'>chatease.js</a>, using flash.<i> - May 12, 2017</i></li>
 					<li>Planning to build an HTML5 live streaming server: <a href='http://rtmpmate.com' target='_blank'>rtmpmate</a>.<i> - Apr. 22, 2017</i></li>
