--- a/playease.html
+++ b/playease.html
@@ -80,7 +80,7 @@
 						<li><a href='playease.html'>playease.js</a></li>
 						<li><a href='chatease.html'>chatease.js</a></li>
 						<li><a href='kiwichatd.html'>kiwichatd</a></li>
-						<li><a href='http://rtmpmate.com' target='_blank'>rtmpmate</a></li>
+						<li><a href='https://github.com/studease/rtmpmate' target='_blank'>rtmpmate</a></li>
 					</ul>
 				</li>
 				<li><a href='contact.html'>CONTACT</a></li>
