--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						<li><a href='playease.html'>playease.js</a></li>
 						<li><a href='chatease.html'>chatease.js</a></li>
 						<li><a href='kiwichatd.html'>kiwichatd</a></li>
-						<li><a href='http://rtmpmate.com' target='_blank'>rtmpmate</a></li>
+						<li><a href='https://github.com/studease/rtmpmate' target='_blank'>rtmpmate</a></li>
 					</ul>
 				</li>
 				<li><a href='contact.html'>CONTACT</a></li>
@@ -102,7 +102,7 @@
 					<li>The chatease-server was renamed as <a href='kiwichatd.html'>kiwichatd</a> at version 2.0.<i> - Dec. 13, 2017</i></li>
 					<li>New feature of <a href='playease.html'>playease.js</a>: MPEG-DASH.<i> - Aug. 10, 2017</i></li>
 					<li>Added support for MSIE 8 & 9 of <a href='chatease.html'>chatease.js</a>, using flash.<i> - May 12, 2017</i></li>
-					<li>Planning to build an HTML5 live streaming server: <a href='http://rtmpmate.com' target='_blank'>rtmpmate</a>.<i> - Apr. 22, 2017</i></li>
+					<li>Planning to build an HTML5 live streaming server: <a href='https://github.com/studease/rtmpmate' target='_blank'>rtmpmate</a>.<i> - Apr. 22, 2017</i></li>
 					<li>Introduced self-adaption display, and added flash render for MSIE 8, in <a href='playease.html'>playease.js</a> 1.0.33.<i> - Apr. 27, 2017</i></li>
 					<li>Added UI controls for <a href='playease.html'>playease.js</a> at version 1.0.08.<i> - Apr. 17, 2017</i></li>
 					<li>First stable version for websocket chat released: chatease.js 1.0.05, chatease-server 1.0.14.<i> - Apr. 13, 2017</i></li>
