--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,8 @@
 		<section>
 			<h3>Contact Us</h3>
 			<p>
-				Talk with an expert about how to meet your goals.<br/><br/>
+				Talk with an expert about how to meet your goals.<br/>
+				公众号：STUDEASE&nbsp;&nbsp;&nbsp;&nbsp;QQ群：528109813<br/>
 				<i>(Dial the number or post to the email at the top or bottom of the page if you don't get a replay timely.)</i>
 			</p>
 		</section>
