--- a/chatease.html
+++ b/chatease.html
@@ -95,7 +95,9 @@
 			<h2>chatease.js</h2>
 			<p>
 				[source] <a href='https://github.com/studease/chatease' target='_blank'>https://github.com/studease/chatease</a><br/>
-				[中文] <a href='http://blog.csdn.net/icysky1989/article/details/52138527' target='_blank'>http://blog.csdn.net/icysky1989/article/details/52138527</a>
+				[中文] <a href='http://blog.csdn.net/icysky1989/article/details/52138527' target='_blank'>http://blog.csdn.net/icysky1989/article/details/52138527</a><br/>
+				公众号：STUDEASE<br/>
+				QQ群：528109813
 			</p>
 			
 			<p>
