--- a/playease.html
+++ b/playease.html
@@ -96,7 +96,9 @@
 			<h2>playease.js</h2>
 			<p>
 				[source] <a href='https://github.com/studease/playease' target='_blank'>https://github.com/studease/playease</a><br/>
-				[中文] <a href='http://blog.csdn.net/icysky1989/article/details/75094205' target='_blank'>http://blog.csdn.net/icysky1989/article/details/75094205</a>
+				[中文] <a href='http://blog.csdn.net/icysky1989/article/details/75094205' target='_blank'>http://blog.csdn.net/icysky1989/article/details/75094205</a><br/>
+				公众号：STUDEASE<br/>
+				QQ群：528109813
 			</p>
 			
 			<p>
