--- a/solutions.html
+++ b/solutions.html
@@ -108,6 +108,7 @@
 			<div class='ol-status'>
 				<label>Online: </label>
 				<span id='ol-users'>0</span>
+				<i>&nbsp;&nbsp;&nbsp;&nbsp;公众号：STUDEASE&nbsp;&nbsp;&nbsp;&nbsp;QQ群：528109813</i>
 			</div>
 			
 			<div class='samplewrap'>
