--- a/chatease.html
+++ b/chatease.html
@@ -342,7 +342,7 @@ _eventMapping = {
 			height: 400,
 			maxlength: 50,
 			maxretries: -1,
-			smoothing: chatease.utils.isMobile(),
+			smoothing: false,
 			debug: true,
 			render: {
 				name: 'def',
