--- a/solutions.html
+++ b/solutions.html
@@ -333,7 +333,7 @@
 			height: 400,
 			maxlength: 50,
 			maxretries: -1,
-			smoothing: chatease.utils.isMobile(),
+			smoothing: false,
 			debug: true,
 			render: {
 				name: 'def',
