--- a/contact.html
+++ b/contact.html
@@ -174,7 +174,7 @@
 			height: 400,
 			maxlength: 50,
 			maxretries: -1,
-			smoothing: chatease.utils.isMobile(),
+			smoothing: false,
 			debug: true,
 			render: {
 				name: 'def',
