--- a/playease.html
+++ b/playease.html
@@ -542,7 +542,7 @@ _eventMapping = {
 			height: 400,
 			maxlength: 50,
 			maxretries: -1,
-			smoothing: chatease.utils.isMobile(),
+			smoothing: false,
 			debug: true,
 			render: {
 				name: 'none',
