--- a/solutions-mobile.html
+++ b/solutions-mobile.html
@@ -206,7 +206,7 @@ a:active, a:focus, a:hover {
 			height: 400,
 			maxlength: 50,
 			maxretries: -1,
-			smoothing: chatease.utils.isMobile(),
+			smoothing: false,
 			debug: true,
 			render: {
 				name: 'def',
