--- a/kiwichatd.html
+++ b/kiwichatd.html
@@ -126,8 +126,7 @@
 
 <?prettify lang=js linenums=true?>
 <pre class='prettyprint'>
-cmake .
-make
+./build.sh
 </pre>
 <br/>
 
@@ -135,7 +134,7 @@ make
 
 <?prettify lang=js linenums=true?>
 <pre class='prettyprint'>
-sudo ./start.sh
+./start.sh
 </pre>
 <br/>
 
