--- a/solutions.html
+++ b/solutions.html
@@ -387,4 +387,21 @@
 			});
 		}
 	</script>
+	
+	<!-- 请置于所有广告位代码之前 -->
+	<script src="http://dup.baidustatic.com/js/ds.js"></script>
+	
+	<!-- 广告位：左右悬浮位 -->
+	<script>
+		(function() {
+			var s = "_" + Math.random().toString(36).slice(2);
+			document.write('<div id="' + s + '"></div>');
+			(window.slotbydup=window.slotbydup || []).push({
+				id: '5541030',
+				container: s,
+				size: '120,300',
+				display: 'float'
+			});
+		})();
+	</script>
 </body>
