--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 		var slicer = slicease('slicer').setup({
 			width: prt.clientWidth,
 			height: prt.clientHeight,
-			sources: ['images/slider/img1.png', 'images/slider/img2.png', 'images/slider/img3.png', 'images/slider/img4.png'],
+			sources: ['images/slider/img1.png', 'images/slider/img2.png', 'images/slider/img3.png', 'images/slider/img4.png', 'images/slider/img5.png'],
 			range: '3-9'
 		});
 	</script>
