--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 			<div id='news'>
 				<h3>News</h3>
 				<ul class='u5 square'>
+					<li>Added UI controls for <a href='slicease.html'>slicease.js</a> at version 3.0.07.<i> - Jul. 27, 2018</i></li>
 					<li>The chatease-server was renamed as <a href='kiwichatd.html'>kiwichatd</a> at version 2.0.<i> - Dec. 13, 2017</i></li>
 					<li>New feature of <a href='playease.html'>playease.js</a>: MPEG-DASH.<i> - Aug. 10, 2017</i></li>
 					<li>Added support for MSIE 8 & 9 of <a href='chatease.html'>chatease.js</a>, using flash.<i> - May 12, 2017</i></li>
@@ -171,7 +172,9 @@
 			width: prt.clientWidth,
 			height: prt.clientHeight,
 			sources: ['images/slider/img1.png', 'images/slider/img2.png', 'images/slider/img3.png', 'images/slider/img4.png', 'images/slider/img5.png'],
-			range: '3-9'
+			range: '3-9',
+			cubic: '5,4',
+			distance: 12
 		});
 	</script>
 </body>
