--- a/slicease.html
+++ b/slicease.html
@@ -102,6 +102,7 @@
 			
 			<h3>News</h3>
 			<ul class='u5 square'>
+				<li>Added UI controls for <a href='slicease.html'>slicease.js</a> at version 3.0.07.<i> - Jul. 27, 2018</i></li>
 				<li><a href='slicease.html'>Slicease.js</a> 3.0 released: Using WebGL.<i> - Feb. 20, 2017</i></li>
 				<li><a href='slicease.html'>Slicease.js</a> 2.0 released: New features, e.g. MVC, event-driven, etc.<i> - Dec. 30, 2015</i></li>
 				<li>
