--- a/slicease.html
+++ b/slicease.html
@@ -124,7 +124,27 @@
 slicease('slicer').setup({
     width: 1000,
     height: 460,
-    sources: ['images/img1.png', 'images/img2.png', 'images/img3.png', 'images/img4.png'],
+    sources: [{
+        file: 'images/img1.png',
+        link: 'http://studease.cn/slicease',
+        target: '_blank'
+    }, {
+        file: 'images/img2.png',
+        link: 'http://studease.cn/playease',
+        target: '_blank'
+    }, {
+        file: 'images/img3.png',
+        link: 'http://studease.cn/chatease',
+        target: '_blank'
+    }, {
+        file: 'images/img4.png',
+        link: 'http://studease.cn/kiwichatd',
+        target: '_blank'
+    }, {
+        file: 'images/img5.png',
+        link: 'https://github.com/studease/kiwistrmd',
+        target: '_blank'
+    }],
     range: '3-9',
     cubic: '5,4',
     distance: 12
@@ -144,7 +164,7 @@ _defaults = {
     aspectratio: '',
     sources: [],
     range: '3-9',
-    cubic: '5,4',
+    cubic: '10,4',
     distance: 12,
     interval: 5000,
     controls: true,
