--- a/index.html
+++ b/index.html
@@ -172,23 +172,23 @@
 			width: prt.clientWidth,
 			height: prt.clientHeight,
 			sources: [{
-				file: 'images/img1.png',
+				file: 'images/slider/img1.png',
 				link: 'http://studease.cn/slicease',
 				target: '_blank'
 			}, {
-				file: 'images/img2.png',
+				file: 'images/slider/img2.png',
 				link: 'http://studease.cn/playease',
 				target: '_blank'
 			}, {
-				file: 'images/img3.png',
+				file: 'images/slider/img3.png',
 				link: 'http://studease.cn/chatease',
 				target: '_blank'
 			}, {
-				file: 'images/img4.png',
+				file: 'images/slider/img4.png',
 				link: 'http://studease.cn/kiwichatd',
 				target: '_blank'
 			}, {
-				file: 'images/img5.png',
+				file: 'images/slider/img5.png',
 				link: 'https://github.com/studease/kiwistrmd',
 				target: '_blank'
 			}],
