--- a/faq.html
+++ b/faq.html
@@ -96,8 +96,10 @@
 			</p>
 			<ul class='u5 square'>
 				<li>Self-adaption and resize feature.</li>
-				<li>Reversed rolling.</li>
-				<li>Control component.</li>
+				<li>
+					Control component, & reversed rolling.
+					<p><a>A: </a>Fixed in version 3.0.07.<i> - Jul. 27 2017</i></p>
+				</li>
 			</ul>
 		</section>
 		</article>
