--- a/solutions-mobile.html
+++ b/solutions-mobile.html
@@ -107,27 +107,19 @@ a:active, a:focus, a:hover {
 			aspectratio: '16:9',
 			//file: '/vod/sample.mp4',
 			sources: [{
-				file: 'http://ccflv.qcus.cn/teach/stream02.flv',
+				file: 'http://pili-live-hdl.qiniu.qcus.cn/abjlive/stream02.flv',
 				type: 'flv',
 				label: 'HTTP-FLV'
-			}, {
-				file: 'ws://ccws.qcus.cn/teach/stream02.flv',
-				type: 'flv',
-				label: 'WS-FLV'
-			}, {
-				file: 'ws://127.0.0.1:8080/teach/stream02',
-				type: 'wss',
-				label: 'WS-fMP4'
 			}, {
 				file: 'http://origin.qcus.cn:1935/teach/stream02/manifest.mpd',
 				type: 'dash',
 				label: 'MPEG-DASH'
 			}, {
-				file: 'rtmp://cclive.qcus.cn/teach/stream02',
+				file: 'rtmp://pili-live-rtmp.qiniu.qcus.cn/abjlive/stream02',
 				type: 'flash',
 				label: 'RTMP-STREAM'
 			}, {
-				file: 'http://cchls.qcus.cn/teach/stream02/index.m3u8',
+				file: 'http://pili-live-hls.qiniu.qcus.cn/abjlive/stream02.m3u8',
 				type: 'def',
 				label: 'HLS-TS'
 			}],
