--- a/chatease.html
+++ b/chatease.html
@@ -149,15 +149,15 @@ var users = document.getElementById('ol-users');
 var events = chatease.events;
 
 var chat = chatease('chat');
-chat.addEventListener(events.CHATEASE_INDENT, onIdent);
+chat.addEventListener(events.CHATEASE_INFO, onInfo);
 chat.addEventListener(events.CHATEASE_CLOSE, onClose);
 chat.setup({
-	url: 'ws://localhost/ch1?token=123456',
+	url: 'ws://localhost/chat/ch1?token=123456',
 	width: 640,
 	height: 400
 });
 
-function onIdent(e) {
+function onInfo(e) {
 	users.innerText = e.channel.total;
 }
 
@@ -235,11 +235,11 @@ _eventMapping = {
     onError: events.ERROR,
     onReady: events.CHATEASE_READY,
     onConnect: events.CHATEASE_CONNECT,
-    onIdent: events.CHATEASE_INDENT,
+    onInfo: events.CHATEASE_INFO,
     onMessage: events.CHATEASE_MESSAGE,
     onJoin: events.CHATEASE_JOIN,
     onLeft: events.CHATEASE_LEFT,
-    onUsers: events.CHATEASE_USERS,
+    onUser: events.CHATEASE_USER,
     onNickClick: events.CHATEASE_VIEW_NICKCLICK,
     onClose: events.CHATEASE_CLOSE
 }
@@ -265,7 +265,8 @@ _eventMapping = {
 			
 			<h3>Server</h3>
 			<p>
-				<a href='kiwichatd.html' target='_blank'>kiwichatd</a>
+				1.0 <a href='kiwichatd.html' target='_blank'>kiwichatd</a></br>
+				1.1 <a href='https://github.com/studease/rtmpmate' target='_blank'>rtmpmate</a>
 			</p>
 			
 			<h3>Software License</h3>
