--- a/contact.html
+++ b/contact.html
@@ -156,20 +156,11 @@
 		var events = chatease.events;
 		
 		var chat = chatease('chat');
-		chat.addEventListener(events.CHATEASE_INDENT, onIdent);
-		chat.addEventListener(events.CHATEASE_USERS, onUsers);
+		chat.addEventListener(events.CHATEASE_INFO, onInfo);
+		chat.addEventListener(events.CHATEASE_USER, onUser);
 		chat.addEventListener(events.CHATEASE_CLOSE, onClose);
 		chat.setup({
-			url: 'ws://chat.qcus.cn/001' + (function() {
-				var params = window.location.search;
-				if (params) {
-					return params;
-				}
-				
-				var id = Math.ceil(Math.random() * 1000);
-				
-				return '?name=游客' + chatease.utils.pad(id, 3) + '&icon=/images/icon/tourist.png';
-			})(),
+			url: 'ws://118.190.79.29:8099/chat/001' + window.location.search,
 			width: 640,
 			height: 400,
 			maxlength: 50,
@@ -186,11 +177,11 @@
 			}
 		});
 		
-		function onIdent(e) {
+		function onInfo(e) {
 			users.innerText = e.channel.total;
 		}
 		
-		function onUsers(e) {
+		function onUser(e) {
 			users.innerText = e.channel.total;
 		}
 		
